--- a/src/components/GalleryComponent/GalleryComponent.css
+++ b/src/components/GalleryComponent/GalleryComponent.css
@@ -13,3 +13,15 @@
     left: 10px; /* Position the "Sort" text outside the button */
     transform: translate(45px, -23px); /* Adjust the position */
 }
+
+
+.search .wrapper:first-child input {
+    font-weight: bold;
+    font-size: 14px;
+    /* padding: 0 0 0 30px !important; */
+}
+
+.search .wrapper:last-child  {
+    font-size: 14px;
+    /* padding: 0 0 0 30px !important; */
+}
