--- a/src/components/GalleryComponent/GalleryComponent.css
+++ b/src/components/GalleryComponent/GalleryComponent.css
@@ -25,3 +25,44 @@
     font-size: 14px;
     /* padding: 0 0 0 30px !important; */
 }
+
+/* Overlay background */
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease;
+    background-color: rgba(0, 0, 0, 0.85);;
+}
+
+.overlay.visible {
+    opacity: 1;
+    pointer-events: all;
+}
+
+/* Overlay content */
+.overlay-content {
+    padding: 20px 50px;
+    width: 50%;
+    height: 50%;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.overlay img {
+    width: 50% ;
+    border-radius: 8px;
+}
+
+.overlay h4, p {
+    color: #fff;
+}
+
+.overlay button{
+    background-color: #fff;
+}
