--- a/src/components/GalleryComponent/GalleryComponent.css
+++ b/src/components/GalleryComponent/GalleryComponent.css
@@ -26,19 +26,18 @@
     /* padding: 0 0 0 30px !important; */
 }
 
+/* Body overflow handling */
+body.overlay-open {
+    overflow: hidden;
+}
+
 /* Overlay background */
 .overlay {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     z-index: 1000;
     opacity: 0;
     pointer-events: none;
-    transition: opacity 0.3s ease;
-    background-color: rgba(0, 0, 0, 0.85);;
+    transition: opacity 0.3s ease-in-out;
+    background-color: rgba(0, 0, 0, 0.85);
 }
 
 .overlay.visible {
@@ -48,21 +47,43 @@
 
 /* Overlay content */
 .overlay-content {
-    padding: 20px 50px;
-    width: 50%;
-    height: 50%;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0);
+    overflow-y:scroll;
 }
 
 .overlay img {
-    width: 50% ;
+    width: 50%;
+    height: fit-content;
     border-radius: 8px;
+    margin-bottom: 20px;
 }
 
-.overlay h4, p {
+.overlay h4, 
+.overlay p {
     color: #fff;
+    margin: 10px 0;
 }
 
-.overlay button{
+.overlay button {
     background-color: #fff;
+    color: #000;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 25%;
+}
+
+/* Ensure the overlay content is scrollable */
+.overlay-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.overlay-header {
+    margin: 15px 0 0 0;
+}
+
+.overlay-user-data p {
+    margin: 0 20px;
 }
