--- a/src/components/GalleryComponent/GalleryComponent.css
+++ b/src/components/GalleryComponent/GalleryComponent.css
@@ -10,8 +10,8 @@
     padding: 0 10px;
     color: #007bff;
     background-color: #fff;
-    left: 10px; /* Position the "Sort" text outside the button */
-    transform: translate(45px, -23px); /* Adjust the position */
+    left: 10px;
+    transform: translate(45px, -23px);
 }
 
 
@@ -51,11 +51,10 @@ body.overlay-open {
     overflow-y:scroll;
 }
 
-.overlay img {
-    width: 50%;
-    height: fit-content;
-    border-radius: 8px;
-    margin-bottom: 20px;
+.overlay-img {
+    background-color: #000;
+    height: 85%;
+    width: 93.5%;
 }
 
 .overlay h4, 
@@ -86,4 +85,11 @@ body.overlay-open {
 
 .overlay-user-data p {
     margin: 0 20px;
+}
+
+.cat-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 0px;
 }
