--- a/src/components/HeaderComponent/HeaderComponent.css
+++ b/src/components/HeaderComponent/HeaderComponent.css
@@ -54,13 +54,16 @@
   background-color: white;
   min-width: 200px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
   top: 100%;
   left: 0;
   margin-top: 0.5rem;
   padding: 10px 0;
   font-size: 14px; 
   border-radius: 4px;
+}
+
+header{
+  z-index: 1000;
 }
 
 .page-links ul li:hover .dropdown-content {
